sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:6: error: reassignment to val
      i = i -1
        ^